--- a/eindproject-website/contact.html
+++ b/eindproject-website/contact.html
@@ -14,15 +14,82 @@
             <img id=logoJP src="LOGOJP.jpg" alt="logoJP">
             <nav>
               <ul>
-                <li ><a href="homepage.html">menu</a></li>
-                <li ><a href="inschrijvingen.html">inschrijvingen</a></li>
-                <li ><a href="weetjes.html">goed om te weten</a></li>
-                <li ><a href="ateliers.html">ateliers</a></li>
-                <li ><a href="theorie.html">kunsttheorie</a></li>
-                <li ><a href="activiteiten.html">activiteiten</a></li>
-                <li ><a href="contact.html">contact</a></li>
+                <li>
+                  <details closed>
+                    <summary>
+                      <a href="inschrijvingen.html">inschrijvingen</a>
+                    </summary>
+                    <ul>
+                      <li><a href="LR.html">lessenroosters</a></li>
+                      <li><a href="inschrijfstarieven.html">tarieven</a></li>
+                      <li><a href="pracktischeinfo.html">praktrische info</a></li>
+                    </ul>
+                  </details>
+                </li>
+                <li>
+                  <details>
+                    <summary>
+                      <a href="weetjes.html">goed om te weten</a>
+                    </summary>
+                    <ul>
+                      <li><a href="vakantie.html">vakantie/sluitingsdagen</a></li>
+                      <li><a href="app.html">APP</a></li>
+                      <li><a href="reglement.html">academiereglement</a></li>
+                    </ul>
+                  </details>
+                </li>
+                <li>
+                  <details>
+                    <summary>
+                      <a href="ateliers.html">ateliers</a>
+                    </summary>
+                    <ul>
+                      <li><a href="kids.html">beeldatelier voor kinderen</a></li>
+                      <li><a href="teens.html">beeldatelier voor jongeren</a></li>
+                      <li><a href="adults.html">opleidingen voor volwassenen</a></li>
+                    </ul>
+                  </details>
+                </li>
+                <li>
+                  <details>
+                    <summary>
+                      <a href="theorie.html">kunsttheorie</a>
+                    </summary>
+                    <ul>
+                      <li><a href="cultuur.html">Beeldende en audiovisuele cultuur</a></li>
+                      <li><a href="cursus.html">vrije cursus kunst- en cultuurfilosofie</a></li>
+                    </ul>
+                  </details>
+                </li>
+                <li>
+                  <details>
+                    <summary>
+                      <a href="activiteiten.html">activiteiten</a>
+                    </summary>
+                    <ul>
+                      <li><a href="aankondigingen.html">aankondigingen</a></li>
+                      <li><a href="expos.html">expos</a></li>
+                      <li><a href="excursies.html">excursies</a></li>
+                      <li><a href="evenmenten.html">evenmenten</a></li>
+                      <li><a href="nieuws.html">nieuws</a></li>
+                      <li><a href="persartikels.html">persartikels</a></li>
+                    </ul>
+                  </details>
+                </li>
+                <li>
+                  <details>
+                    <summary>
+                      <a href="contact.html">contact</a>
+                    </summary>
+                    <ul>
+                      <li><a href="adress.html">adress</a></li>
+                      <li><a href="contactgegevens.html">contactgegevens</a></li>
+                      <li><a href="secretariaat.html">openingsuren secretariaat</a></li>
+                    </ul>
+                  </details>
+                </li>
               </ul>
-            </nav>
+          </nav>
             <table>
                 <tr>
                   <th>maandag</th>
@@ -100,6 +167,12 @@
               +Portaels/@50.9302534,4.4192109,15z/data=!4m12!1m6!3m5!1s0x0:
               0xc32a3b1673692407!2sStedelijke+academie+voor+beeldende+kunsten+Jan+Portaels!8m2!3d50.9304967!
               4d4.4197014!3m4!1s0x0:0xc32a3b1673692407!8m2!3d50.9304967!4d4.4197014">Spiegelstraat 62 – 1800 Vilvoorde</a>
+              <p>
+                <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.6324730183464!2d4.4175397159091645!3d50.9305153605379!2m3!1f0!2f0
+                !3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3e800442ef155%3A0xc32a3b1673692407!2sStedelijke%20academie%20voor%20beeldende%20kunsten%20Jan%20Portaels
+                !5e0!3m2!1snl!2sbe!4v1651147431005!5m2!1snl!2sbe" 
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </p>
             </div>
             <div>
               <h4>contactgegevens</h4>
