--- a/eindproject-website/homepage.html
+++ b/eindproject-website/homepage.html
@@ -7,18 +7,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Academie Beeldende Kunsten Vilvoorde</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
 </head>
 
 <body>
-  <div id="backgroundImage"></div>
-  <div class="hide" id="backgroundImage1"></div>
-  <div class="show" id="backgroundImage2"></div>
-  <div class="ovarlay"></div>
-  <div class="infoText">
-    <a href="weetjes.html">goed om te weten</a>
-    <span>COMPANY NAME</span>
+  <h1>
+  <details closed>
+    <summary>
+      <p>Welkom!</p>
+      <p>Academie beeldende kunsten Vilvoorde</p>
+    </summary>
+    <ul>
+      <li><a href="inschrijvingen.html">inschrijvingen</a></li>
+      <li><a href="weetjes.html">goed om te weten</a></li>
+      <li><a href="ateliers.html">ateliers</a></li>
+      <li><a href="theorie.html">kunsttheorie</a></li>
+      <li><a href="activiteiten.html">activiteiten</a></li>
+      <li><a href="contact.html">contact</a></li>
+    </ul>
+  </details>
+</h1>
+
+  <div class="slideshow">
+    <div class="slideshow-image" style="background-image: url('greypainter.jpeg')"></div>
+    <div class="slideshow-image" style="background-image: url('crayondrawing.jpeg')"></div>
+    <div class="slideshow-image" style="background-image: url('animalbox.jpg')"></div>
+    <div class="slideshow-image" style="background-image: url('machine.jpg')"></div>
+    <div class="slideshow-image" style="background-image: url('metalbuild.jpg')"></div>
   </div>
+
 </body>
 
 </html>
