--- a/eindproject-website/activiteiten.html
+++ b/eindproject-website/activiteiten.html
@@ -132,42 +132,13 @@
             <h2>
               Activiteiten
             </h2>
-            <details closed>
-                <summary>
-                    <h4>aankondigingen</h4>
-                </summary>
-                <p>dfusheufydsu</p>
-            </details>
-            <details close>
-                <summary>
-                    <h4>expos</h4>
-                </summary>
-                <p>dfusheufydsu</p>
-            </details>
-            <details closed>
-                <summary>
-                    <h4>excursies</h4>
-                </summary>
-                <p>dfusheufydsu</p>
-            </details>
-            <details closed>
-                <summary>
-                    <h4>evenmenten</h4>
-                </summary>
-                <p>dfusheufydsu</p>
-            </details>
-            <details closed>
-              <summary>
-                  <h4>nieuws</h4>
-              </summary>
-              <p>dfusheufydsu</p>
-          </details>
-          <details closed>
-            <summary>
-                <h4>persatikels</h4>
-            </summary>
-            <p>dfusheufydsu</p>
-        </details>
+            <ul>
+              <li><a href="aankondigingen.html">aankondigingen</a></li>
+              <li><a href="expos.html">expos</a></li>
+              <li><a href="excursies.html">excursies</a></li>
+              <li><a href="evenmenten.html">evenmenten</a></li>
+              <li><a href="nieuws.html">nieuws</a></li>
+              <li><a href="persartikels.html">persartikels</a></li>
         </aside>
     </div>
     <footer>
@@ -186,11 +157,15 @@
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </p>
         </div>
+        
         <div>
           <h4>contactgegevens</h4>
           <p>telefoonnummer 02/251.51.51</p>
           <p>directie.academiebeeldendekunsten@sovilvoorde.be</p>
           <p>secretariaat.academiebeeldendekunsten@sovilvoorde.be</p>
+          <p>
+            <img id="logo" src="logo.png" alt="logo">
+          </p>
         </div>
         <div>
           <h4>openingsuren secretariaat</h4>
