--- a/eindproject-website/ateliers.html
+++ b/eindproject-website/ateliers.html
@@ -132,71 +132,11 @@
                 <h2>
                     Ateliers
                 </h2>
-                <details closed>
-                    <summary>
-                        <h4>beeldatelier voor kinderen</h4>
-                    </summary>
-                    <p>
-                        Voor wie? graad1 (lj1 en 2); graad2 (lj 3-4-5-6), 2lesuren per week
-                        Waar? Spiegelstraat;peutie;houtem;koningslo;kassei
-                        Wat? 
-                        Wanneer?
-                        Wat breng je mee?
-                    </p>
-                </details>
-                <details closed>
-                    <summary>
-                        <h4>beeldatelier voor jongeren</h4>
-                    </summary>
-                    <p>
-                        Voor wie? graad3 (12j-18j), 4lesuren per week
-                        Waar? Spiegelstraat
-                        Wat?
-                        Wanneer?
-                        Wat breng je mee?
-                    </p>
-                </details>
-                <details closed>
-                    <summary>
-                        <h4>opleidingen voor volwassenen</h4>
-                    </summary>
-                    <p>graad 4 +18j
-                        8 lesuren per week
-                        Waar? Spiegelstraat 
-                    </p>
-                    <details closed>
-                        <summary>
-                            <h4>Voor iedereen +18; graad 4</h4>
-                        </summary>
-                        <p>
-                            SCHILDERKUNST
-                            Wat?
-                            (inhoud)
-                            Wanneer?
-                            Docenten?
-                            TEKENKUNST
-                            Wat?
-                            (inhoud)
-                            Wanneer?
-                            Docenten?
-                            DRUKKUNST EN VRIJE GRAFIEK
-                            BEELDHOUWEN EN RUIMTELIJKE KUNST
-                        </p>
-                    </details>
-                    <details closed>
-                        <summary>
-                            voor gevorderden +18; specilisatie 
-                        </summary>
-                        <p>
-                            (zie above)
-
-                            graad 4
-                            PROJECTATELIER
-                            CROSS OVER
-                        </p>
-                    </details>
-                </details>
-                
+                <ul>
+                  <li><a href="kids.html">beeldatelier voor kinderen</a></li>
+                  <li><a href="teens.html">beeldatelier voor jongeren</a></li>
+                  <li><a href="adults.html">opleidingen voor volwassenen</a></li>
+                </ul>
             </aside>
         </div>
         <footer>
@@ -215,11 +155,15 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </p>
             </div>
+            
             <div>
               <h4>contactgegevens</h4>
               <p>telefoonnummer 02/251.51.51</p>
               <p>directie.academiebeeldendekunsten@sovilvoorde.be</p>
               <p>secretariaat.academiebeeldendekunsten@sovilvoorde.be</p>
+              <p>
+                <img id="logo" src="logo.png" alt="logo">
+              </p>
             </div>
             <div>
               <h4>openingsuren secretariaat</h4>
