--- a/eindproject-website/contact.html
+++ b/eindproject-website/contact.html
@@ -132,30 +132,11 @@
                 <h2>
                     Contact
                 </h2>
-                <details closed>
-                    <summary>
-                        <h4>adres en contactgegevens</h4>
-                    </summary>
-                    <p>dfusheufydsu</p>
-                </details>
-                <details closed>
-                    <summary>
-                        <h4>bereikbaarheid</h4>
-                    </summary>
-                    <p>dfusheufydsu</p>
-                </details>
-                <details closed>
-                    <summary>
-                        <h4>ligging</h4>
-                    </summary>
-                    <p>dfusheufydsu</p>
-                </details>
-                <details closed>
-                    <summary>
-                        <h4>openingsuren secretariaat</h4>
-                    </summary>
-                    <p>dfusheufydsu</p>
-                </details>
+                <ul>
+                  <li><a href="adress.html">adress</a></li>
+                  <li><a href="contactgegevens.html">contactgegevens</a></li>
+                  <li><a href="secretariaat.html">openingsuren secretariaat</a></li>
+                </ul>
             </aside>
         </div>
         <footer>
@@ -174,11 +155,15 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </p>
             </div>
+            
             <div>
               <h4>contactgegevens</h4>
               <p>telefoonnummer 02/251.51.51</p>
               <p>directie.academiebeeldendekunsten@sovilvoorde.be</p>
               <p>secretariaat.academiebeeldendekunsten@sovilvoorde.be</p>
+              <p>
+                <img id="logo" src="logo.png" alt="logo">
+              </p>
             </div>
             <div>
               <h4>openingsuren secretariaat</h4>
