--- a/eindproject-website/theorie.html
+++ b/eindproject-website/theorie.html
@@ -132,29 +132,11 @@
                 <h2>
                     Kunsttheorie
                 </h2>
-                <details closed>
-                    <summary>
-                        <h4>Beeldende en audiovisuele cultuur</h4>
-                    </summary>
-                    <p>
-                        Voor wie: +18 jaar 2 keer 4 lesuren per maand
-                        Wat?
-                        Wanneer?
-                        Docenten?
-                    </p>
-                </details>
-                <details closed>
-                    <summary>
-                        <h4>vrije cursus kunst- en cultuurfilosofie</h4>
-                    </summary>
-                    <p> 
-                        Voor wie: +18 jaar 1 keer 4 lesuren per maand
-                        Wat?
-                        Wanneer?
-                        Docenten?
-                    </p>
-                </details>
-               
+                <ul>
+                  <li><a href="cultuur.html">Beeldende en audiovisuele cultuur</a></li>
+                  <li><a href="cursus.html">vrije cursus kunst- en cultuurfilosofie</a></li>
+                </ul>
+
             </aside>
         </div>
         <footer>
@@ -173,11 +155,15 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </p>
             </div>
+            
             <div>
               <h4>contactgegevens</h4>
               <p>telefoonnummer 02/251.51.51</p>
               <p>directie.academiebeeldendekunsten@sovilvoorde.be</p>
               <p>secretariaat.academiebeeldendekunsten@sovilvoorde.be</p>
+              <p>
+                <img id="logo" src="logo.png" alt="logo">
+              </p>
             </div>
             <div>
               <h4>openingsuren secretariaat</h4>
