--- a/eindproject-website/weetjes.html
+++ b/eindproject-website/weetjes.html
@@ -132,25 +132,11 @@
                 <h2>
                     Goed om te weten
                 </h2>
-                <details closed>
-                    <summary>
-                        <h4>sluitingsdagen-vakantieperiodes-pedagogische studiedagen</h4>
-                    </summary>
-                    <p>dfusheufydsu</p>
-                </details>
-                <details closed>
-                    <summary>
-                        <h4>APP</h4>
-                    </summary>
-                    <p>dfusheufydsu</p>
-                </details>
-                <details closed>
-                    <summary>
-                        <h4>aademiereglement</h4>
-                    </summary>
-                    <p>dfusheufydsu</p>
-                </details>
-                
+                <ul>
+                  <li><a href="vakantie.html">sluitingsdagen-vakantieperiodes-pedagogische studiedagen</a></li>
+                  <li><a href="app.html">APP</a></li>
+                  <li><a href="reglement.html">academiereglement</a></li>
+                </ul>
             </aside>
         </div>
         <footer>
@@ -169,11 +155,15 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </p>
             </div>
+            
             <div>
               <h4>contactgegevens</h4>
               <p>telefoonnummer 02/251.51.51</p>
               <p>directie.academiebeeldendekunsten@sovilvoorde.be</p>
               <p>secretariaat.academiebeeldendekunsten@sovilvoorde.be</p>
+              <p>
+                <img id="logo" src="logo.png" alt="logo">
+              </p>
             </div>
             <div>
               <h4>openingsuren secretariaat</h4>
