--- a/eindproject-website/reglement.html
+++ b/eindproject-website/reglement.html
@@ -186,11 +186,15 @@
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </p>
     </div>
+    
     <div>
       <h4>contactgegevens</h4>
       <p>telefoonnummer 02/251.51.51</p>
       <p>directie.academiebeeldendekunsten@sovilvoorde.be</p>
       <p>secretariaat.academiebeeldendekunsten@sovilvoorde.be</p>
+      <p>
+        <img id="logo" src="logo.png" alt="logo">
+      </p>
     </div>
     <div>
       <h4>openingsuren secretariaat</h4>
@@ -240,7 +244,6 @@
   </div>
   
 </footer>
-
 
 </div>
 </body>
