--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="functie">Oefening functie</a></li>
         <li><a href="opdracht-canvasloop">canvasloop</a></li>
         <li><a href="portfolio">portfolio</a></li>
+        <li><a href="homepage.html">Website eindproject</a></li>
     </ul>
 </body>
 </html>
